--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,9 +1,11 @@
-/* Estilos globais */
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
+/*~ Estilos globais */
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: linear-gradient(to right, #c7e0f8, #cdd1f1);
     text-align: center;
     height: 100%;
