--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/base.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/home.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/sobre.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/projeto.css') }}">
@@ -33,7 +34,7 @@
             </ul>
         </nav>
 
-        <main class="container py-5 ">
+        <main class="container">
             {% block content %}
             {% endblock %}
         </main>
