--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
             {% endblock %}
         </main>
 
-        <footer class="mt-auto bg-dark text-white text-center py-3">
+        <footer class="footer mt-auto">
             <p>&copy; 2025 Marcello Prado Muller. Todos os direitos reservados.</p>
             <p>Desenvolvido com <i class="fas fa-heart text-danger"></i> por Marcello Prado Muller</p>
         </footer>
