--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -19,9 +19,10 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #444;
-    border-radius: 15%;
+    background-color: #313131;
+    border-radius: 5%;
     box-shadow: 0 0.4rem 0.8rem rgba(97, 218, 251, 0.2);
+    transition: ease-in-out;
 }
 
 /*^ Rodapé */
@@ -30,4 +31,5 @@ nav a:hover {
     color: white;
     text-align: center;
     padding-top: 1.0rem;
+    font-size: small;
 }
