--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -1,6 +1,7 @@
 span {
     font-weight: bold;
 }
+
 .nome-completo {
     white-space: nowrap;
     font-size: 4.0rem;
@@ -14,6 +15,7 @@ img.rounded-circle {
     height: auto;
     box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
 }
+
 .perfil-img {
     max-width: 20rem;
     border: 0.5rem solid #e0e0e0;
@@ -24,19 +26,20 @@ img.rounded-circle {
     transform: scale(1.03);
 }
 
+
 /* Tablets */
-@media (max-width: 99.2rem) { 
+@media (max-width: 1199px) { 
   .nome-completo {
     font-size: 3.2rem;
   }
 
   .perfil-img {
-    max-width: 22rem;
+    max-width: 20rem;
   }
 }
 
 /* Celulares médios */
-@media (max-width: 76.8rem) { 
+/* @media (max-width: 76.8rem) { 
   .nome-completo {
     font-size: 2.7rem;
     white-space: normal;
@@ -45,7 +48,7 @@ img.rounded-circle {
   .perfil-img {
     max-width: 18rem; 
   }
-}
+} */
 
 /* Celulares pequenos */
 @media (max-width: 48rem) { 
@@ -56,7 +59,7 @@ img.rounded-circle {
 
   .perfil-img {
     max-width: 15rem;
-    margin: 0 auto;
+    margin: 0 auto 1.5rem auto;
     display: block;
   }
 
@@ -64,3 +67,35 @@ img.rounded-circle {
     text-align: center;
   }
 }
+  /* Espaçamento entre os blocos */
+  .texto-esquerda {
+    margin-top: 1rem;
+    padding: 0 1rem;
+    
+  }
+
+  /* Centralizar melhor o texto */
+  .texto-esquerda p {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+
+
+/* Ajustes para mobile */
+@media (max-width: 767.98px) { 
+  /* --- ORDEM --- */
+.row.align-items-center {
+    flex-direction: column-reverse; 
+    text-align: center;
+  }
+}
+  .texto-esquerda {
+    margin-top: 1.5rem;
+}
+
+.perfil-img {
+    max-width: 220px; 
+    margin: 0 auto 1.5rem auto; 
+    display: block;
+} 
+
