--- a/static/assets/css/sobre.css
+++ b/static/assets/css/sobre.css
@@ -1,9 +1,10 @@
 /*^ Seção Sobre */
 main {
-    padding: 30px;
+    padding-top: 30px;
     color: #282c34;
     display: flex;
     justify-content: center;
+    
 }
 .section-about {
     background-color: #3b869b;
@@ -12,6 +13,21 @@ main {
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
-    max-width: 35rem;
+    max-width: 45rem;
+    max-height: 80rem;
     align-items: center;
+}
+.section-about h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+}
+.section-about p {
+    font-size: 1.3rem;
+    line-height: 1.5;
+    text-align: justify;
+    margin: 1.5rem;
+    font-family: 'Franklin Gothic Medium';
+}
+main.container {
+   height: 80vh;
 }
