--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -6,15 +6,17 @@
 
 html {
   font-size: 62.5%; /* 1rem = 10px */
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
     background-color: linear-gradient(to right, #c7e0f8, #cdd1f1);
     text-align: center;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    
 }
 
 :root{
