--- a/templates/home.html
+++ b/templates/home.html
@@ -1,48 +1,50 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row align-items-center">
-    <!-- Texto à esquerda -->
-    <div class="texto-esquerda col-md-7 text-center text-md-start">
-        <h1 class="nome-completo">
-            Olá, eu sou o <span class="text-primary">Marcello Prado Muller</span>
-        </h1>
-        <p class="lead">Desenvolvedor Frontend | Python | Em evolução no Backend</p>
+<div class="container">
+    <div class="row align-items-center">
+        <!-- Texto -->
+        <div class="col texto-esquerda text-center text-md-start order-2 order-md-1">
+            <h1 class="nome-completo">
+                Olá, eu sou o <span class="text-primary">Marcello Prado Muller</span>
+            </h1>
+            <p class="lead">Desenvolvedor Frontend | Python | Em evolução no Backend</p>
 
-        <p>Bem-vindo ao meu portfólio! Aqui você vai encontrar alguns dos meus projetos favoritos, desenvolvidos com dedicação, foco em boas práticas e uso de tecnologias modernas.</p>
-        <p class="fst-italic mt-5">✨Transformando ideias em soluções digitais de verdade.</p>
-    </div>
-
-    <!-- Imagem à direita -->
-    <div class="col-md-5 text-center mt-4 mt-md-0">
-        <img src="{{ url_for('static', filename='assets/imagens/perfil/minha-foto.png') }}"
+            <p>Bem-vindo ao meu portfólio! Aqui você vai encontrar alguns dos meus projetos favoritos, desenvolvidos com dedicação, foco em boas práticas e uso de tecnologias modernas.</p>
+            <p class="fst-italic mt-5">✨Transformando ideias em soluções digitais de verdade.</p>
+        </div>
+        
+        <!-- Imagem -->
+        <div class="col text-center mt-4 mt-md-0 order-1 order-md-2">
+            <img src="{{ url_for('static', filename='assets/imagens/perfil/minha-foto.png') }}"
             alt="Foto de Marcello"
             class="img-fluid rounded-circle perfil-img">
+        </div>
+        
     </div>
-
-    <!-- Ícones das tecnologias -->
-    <div class="icones my-4 text-center">
-        <h3 class="mb-3">Tecnologias usadas nesse projeto</h3>
-        <div class="d-flex flex-wrap justify-content-center gap-4">
-            <div class="tech-icon" data-bs-toggle="tooltip" title="Python">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" width="55" alt="Python" />
-            </div>
-            <div class="tech-icon" data-bs-toggle="tooltip" title="Flask">
-                <i class="devicon-flask-original colored fa-3x"></i>
-            </div>
-            <div class="tech-icon" data-bs-toggle="tooltip" title="HTML5">
-                <i class="devicon-html5-plain-wordmark fa-3x colored"></i>
-            </div>
-            <div class="tech-icon" data-bs-toggle="tooltip" title="CSS3">
-                <i class="devicon-css3-plain-wordmark fa-3x colored"></i>
-            </div>
-            <div class="tech-icon bootstrap" data-bs-toggle="tooltip" title="Bootstrap">
-                <i class="devicon-bootstrap-plain-wordmark fa-3x colored"></i>
-            </div>
-            <div class="tech-icon" data-bs-toggle="tooltip" title="Json">
-                <i class="devicon-json-plain colored fa-3x"></i>
+        <!-- Ícones das tecnologias -->
+        <div class="icones my-4 text-center order-3">
+            <h3 class="mb-3">Tecnologias usadas nesse projeto</h3>
+            <div class="d-flex flex-wrap justify-content-center gap-4">
+                <div class="tech-icon" data-bs-toggle="tooltip" title="Python">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" width="55" alt="Python" />
+                </div>
+                <div class="tech-icon" data-bs-toggle="tooltip" title="Flask">
+                    <i class="devicon-flask-original colored fa-3x"></i>
+                </div>
+                <div class="tech-icon" data-bs-toggle="tooltip" title="HTML5">
+                    <i class="devicon-html5-plain-wordmark fa-3x colored"></i>
+                </div>
+                <div class="tech-icon" data-bs-toggle="tooltip" title="CSS3">
+                    <i class="devicon-css3-plain-wordmark fa-3x colored"></i>
+                </div>
+                <div class="tech-icon bootstrap" data-bs-toggle="tooltip" title="Bootstrap">
+                    <i class="devicon-bootstrap-plain-wordmark fa-3x colored"></i>
+                </div>
+                <div class="tech-icon" data-bs-toggle="tooltip" title="Json">
+                    <i class="devicon-json-plain colored fa-3x"></i>
+                </div>
             </div>
         </div>
-    </div>
 </div>
 {% endblock %}
