--- a/static/assets/css/sobre.css
+++ b/static/assets/css/sobre.css
@@ -7,7 +7,7 @@ main {
     
 }
 .section-about {
-    background-color: #3b869b;
+    background-color: var(--cor-fundo);
     padding: 22px;
     border-radius: 8px;
     margin-bottom: 20px;
