--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container-home">
     <div class="row align-items-center">
         <!-- Texto -->
         <div class="col texto-esquerda text-center text-md-start order-2 order-md-1">
