--- a/templates/projetoViews.html
+++ b/templates/projetoViews.html
@@ -1,16 +1,16 @@
-{% extends 'base.html' %} 
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="projeto-container">
   <div class="row align-items-center w-100 g-5">
     <!-- Botão de Voltar -->
     <div>
-      <a href="{{ url_for('projetos') }}?id={{ projeto['id'] }}" class="btn-voltar">
-        ⬅ Voltar
+      <a href="{{ url_for('projetos') }}?id={{ projeto['id'] }}" class="btn-voltar p-2 d-inline-block mb-3">
+        <i class="fas fa-arrow-left"></i> Voltar
       </a>
-      
     </div>
     <!-- Texto -->
-    <div class="projeto-info col-12 col-md-6 h-100 d-flex flex-column justify-content-center">
+    <div
+      class="projeto-info col-12 col-md-6 h-100 d-flex flex-column justify-content-center"
+    >
       <h1>{{ projeto['titulo'] }}</h1>
       <p>{{ projeto['descricao'] }}</p>
 
@@ -24,9 +24,7 @@
       </a>
       {% else %}
       <p class="text-danger mt-3">Link do projeto indisponível</p>
-      {% endif %} 
-
-      {% if projeto['link-repositorio'] != "#" %}
+      {% endif %} {% if projeto['link-repositorio'] != "#" %}
       <a
         href="{{ projeto['link-repositorio'] }}"
         target="_blank"
@@ -38,8 +36,6 @@
       <p class="text-danger mt-3">Link do repositório indisponível</p>
       {% endif %}
     </div>
-
-    
 
     <!-- Vídeo ou Imagem -->
     <div
