ajustes para responsivo

--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -1,105 +1,39 @@
 .row {
-    margin: 0 2rem 0 3rem;
-    padding-top: 2rem;
+  margin: 0 2rem 0 3rem;
+  padding-top: 2rem;
 }
 span {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .nome-completo {
-    white-space: nowrap;
-    font-size: 4.0rem;
+  white-space: nowrap;
+  font-size: 4rem;
+}
+.texto-esquerda .lead p{
+  font-weight: 600;
+  color: chocolate;
 }
 
 /*^ Foto */
 img.rounded-circle {
-    border: 0.5rem solid #e0e0e0;
-    max-width: 30rem;
-    width: 100%;
-    height: auto;
-    box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
+  border: 0.5rem solid #e0e0e0;
+  max-width: 30rem;
+  height: auto;
+  box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
 }
 
-.perfil-img {
-    max-width: 20rem;
-    border: 0.5rem solid #e0e0e0;
-    box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
-    transition: transform 0.5s ease;
-}
-.perfil-img:hover {
-    transform: scale(1.03);
-}
-
-
-/* Tablets */
-@media (max-width: 1199px) { 
+/** resposividade */
+@media (max-width: 767px) {
   .nome-completo {
-    font-size: 3.2rem;
+    font-size: 3rem;
   }
 
   .perfil-img {
-    max-width: 20rem;
+    width: 15rem;
   }
-}
-
-/* Celulares médios */
-/* @media (max-width: 76.8rem) { 
-  .nome-completo {
-    font-size: 2.7rem;
-    white-space: normal;
-  }
-
-  .perfil-img {
-    max-width: 18rem; 
-  }
-} */
-
-/* Celulares pequenos */
-@media (max-width: 48rem) { 
-  .nome-completo {
-    font-size: 2.2rem;
-    text-align: center;
-  }
-
-  .perfil-img {
-    max-width: 15rem;
-    margin: 0 auto 1.5rem auto;
-    display: block;
-  }
-
-  .perfil-section {
-    text-align: center;
-  }
-}
-  /* Espaçamento entre os blocos */
-  .texto-esquerda {
-    margin-top: 1rem;
-    padding: 0 1rem;
+  .texto-esquerda p {
+    font-size: 1.2rem;
     
   }
-
-  /* Centralizar melhor o texto */
-  .texto-esquerda p {
-    text-align: center;
-    font-size: 1.5rem;
-  }
-
-
-/* Ajustes para mobile */
-@media (max-width: 767.98px) { 
-  /* --- ORDEM --- */
-.row.align-items-center {
-    flex-direction: column-reverse; 
-    text-align: center;
-  }
 }
-  .texto-esquerda {
-    margin-top: 1.5rem;
-}
-
-.perfil-img {
-    max-width: 220px; 
-    margin: 0 auto 1.5rem auto; 
-    display: block;
-} 
-
