--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -13,10 +13,10 @@ html {
 body {
     background-color: linear-gradient(to right, #c7e0f8, #cdd1f1);
     text-align: center;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    
+    height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    margin: 0;
 }
 
 :root{
