corrigindo texto home

--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -10,9 +10,12 @@ span {
   white-space: nowrap;
   font-size: 4rem;
 }
-.texto-esquerda .lead p{
+.text p{
   font-weight: 600;
-  color: chocolate;
+  font-size: 1.3rem;
+}
+.text .lead {
+  padding-top: 3rem;
 }
 
 /*^ Foto */
