--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -25,6 +25,12 @@ img.rounded-circle {
   height: auto;
   box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
 }
+.perfil-img {
+    width: 50vh;
+    border: 0.5rem solid #e0e0e0;
+    box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
+}
+
 
 /** resposividade */
 @media (max-width: 767px) {
