--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -1,14 +1,15 @@
-.row {
-  margin: 0 2rem 0 3rem;
-  padding-top: 2rem;
+.container-home{
+    gap: 2rem;
+    padding-top: 2rem;
 }
+
 span {
   font-weight: bold;
+  white-space: nowrap;
 }
 
 .nome-completo {
-  white-space: nowrap;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .text p{
   font-weight: 600;
@@ -26,20 +27,31 @@ img.rounded-circle {
   box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
 }
 .perfil-img {
-    width: 50vh;
+    width: 20rem;
     border: 0.5rem solid #e0e0e0;
     box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s ease;
 }
 
 
 /** resposividade */
-@media (max-width: 767px) {
+@media (max-width: 992px) {
+  .container-home{
+    flex-direction: column;
+    align-items: center;
+    
+  }
   .nome-completo {
     font-size: 3rem;
   }
+    span {
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+}
 
   .perfil-img {
-    width: 15rem;
+    width: wrap-content;
   }
   .texto-esquerda p {
     font-size: 1.2rem;
