--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="container-home">
-    <div class="row align-items-center">
+    <div class="row align-items-center align-items-lg-end">
         <!-- Texto -->
-        <div class="col texto-esquerda text-center text-md-start">
+        <div class="col-12 col-lg-8 text-center text-lg-start">
             <h1 class="nome-completo">
                 Olá, eu sou o <span class="text-primary">Marcello Prado Muller</span>
             </h1>
@@ -17,7 +17,7 @@
         </div>
         
         <!-- Imagem -->
-        <div class="col text-center mt-4 mt-md-0">
+        <div class="col-12 col-lg-4 text-center mt-4 mt-lg-0">
             <img src="{{ url_for('static', filename='assets/imagens/perfil/minha-foto.png') }}"
             alt="Foto de Marcello"
             class="img-fluid rounded-circle perfil-img">
