--- a/templates/projetoViews.html
+++ b/templates/projetoViews.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 <div class="projeto-container">
   <div class="row align-items-center w-100 g-5">
     <!-- Botão de Voltar -->
