Alterações no sobre

--- a/static/assets/css/sobre.css
+++ b/static/assets/css/sobre.css
@@ -22,11 +22,11 @@ main {
     margin-bottom: 1.5rem;
 }
 .section-about p {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     line-height: 1.5;
     text-align: justify;
     margin: 1.5rem;
-    font-family: 'Franklin Gothic Medium';
+    font-weight: 500;
 }
 main.container {
    height: 80vh;
