--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 
 :root{
     --azul-letras: #61dafb;
-    --cor-fundo: #3b869b;
+    --cor-fundo: #79b7c7;
     --fundo: #282c34;
     --branco: #FFF;
 
