--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -9,7 +9,7 @@ content %}
       para evoluir.</p>
     <p>Nos últimos anos, decidi mergulhar de vez no mundo da programação. Estudei Front-end (HTML, CSS, JavaScript, React e Git), fiz formações na Alura e, mais recentemente, venho me dedicando ao Python com a Hashtag Treinamentos e ao programa Entra21 (Blusoft + Sesc/Senac).</p>
       <p>
-        Hoje, já Utilizo frameworks como Flask e Django, além de bancos de dados SQL. Sigo aprendendo todos os dias, com o objetivo de transformar ideias em projetos reais, com código limpo, bem estruturado e útil para as pessoas.
+        Hoje, Já utilizo tecnologias como Flask, Django, React, Bootstrap e bancos de dados SQL. Sigo aprendendo todos os dias, com o objetivo de transformar ideias em projetos reais, com código limpo, bem estruturado e útil para as pessoas.
       </p>
     </p>
   </section>
