--- a/static/assets/css/projetosViews.css
+++ b/static/assets/css/projetosViews.css
@@ -1,3 +1,12 @@
+.projeto-container {
+  background-color: coral;
+  margin-top: 5rem;
+}
+.projeto-info {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
 .btn-voltar {
     position: absolute; /*^ Fica fixo na tela */
     top: 100px;
