--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="{{ url_for('static', filename='assets/imagens/favicon.ico') }}" />
+    <link rel="icon" href="{{ url_for('static', path='assets/imagens/favicon.ico') }}" />
     <title>
       {% block title %}Portfólio Marcello Prado Muller {% endblock %}
     </title>
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/base.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/home.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/sobre.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/projeto.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/projetosViews.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/contato.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', path='assets/css/style.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', path='assets/css/base.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', path='assets/css/home.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', path='assets/css/sobre.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', path='assets/css/projeto.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', path='assets/css/projetosViews.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', path='assets/css/contato.css') }}"/>
   </head>
   {% block body %}
   <body>
@@ -38,7 +38,8 @@
                 {'url': '/', 'nome': 'Início'}, 
                 {'url': '/sobre', 'nome': 'Sobre'}, 
                 {'url': '/projetos', 'nome': 'Projetos'}, 
-                {'url': '/contato', 'nome': 'Contato'} ] %}
+                {'url': '/contato', 'nome': 'Contato'}, 
+                {'url': '/certificados', 'nome': 'Certificados'}] %}
             <li><a href="{{ item.url }}">{{ item.nome }}</a></li>
             {% endfor %}
           </ul>
@@ -61,7 +62,7 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
-    <script src="{{ url_for('static', filename='assets/js/hamburger.js') }}"></script>
+    <script src="{{ url_for('static', path='assets/js/hamburger.js') }}"></script>
   </body>
   {% endblock %}
 </html>
