--- a/templates/projeto_detalhes.html
+++ b/templates/projeto_detalhes.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %} 
+
 {% block content %}
+
 <div class="projeto-container">
+
   <div class="row align-items-center w-100 g-5">
+
     <!-- Botão de Voltar -->
     <div>
-      <a href="{{ url_for('projetos') }}?id={{ projeto['id'] }}" class="btn-voltar p-2 d-inline-block mb-3">
+      <a href="{{ url_for('pagina_projetos') }}" class="btn-voltar p-2 d-inline-block mb-3">
         <i class="fas fa-arrow-left"></i> Voltar
       </a>
     </div>
+
     <!-- Texto -->
     <div
       class="projeto-info col-12 col-md-6 h-100 d-flex flex-column justify-content-center"
@@ -19,18 +24,18 @@
       <a
         href="{{ projeto['link'] }}"
         target="_blank"
-        class="btn-projeto mt-3 d-inline-block"
-      >
+        class="btn-projeto mt-3 d-inline-block">
         🔗 Ver Projeto
       </a>
       {% else %}
       <p class="text-danger mt-3">Link do projeto indisponível</p>
-      {% endif %} {% if projeto['link-repositorio'] != "#" %}
+      {% endif %} 
+      
+      {% if projeto['link-repositorio'] != "#" %}
       <a
         href="{{ projeto['link-repositorio'] }}"
         target="_blank"
-        class="btn-projeto mt-3 d-inline-block"
-      >
+        class="btn-projeto mt-3 d-inline-block">
         🔗 Ver Repositório
       </a>
       {% else %}
@@ -39,9 +44,8 @@
     </div>
 
     <!-- Vídeo ou Imagem -->
-    <div
-      class="projeto-video col-12 col-md-6 h-100 d-flex align-items-center justify-content-center"
-    >
+    <div class="projeto-video col-12 col-md-6 h-100 d-flex align-items-center justify-content-center">
+
       {% if projeto['video'] %}
       <video
         class="w-100 h-100"
@@ -49,17 +53,15 @@
         controls
         autoplay
         muted
-        loop
-      >
+        loop>
         <source
-          src="{{ url_for('static', filename=projeto['video']) }}"
-          type="video/mp4"
-        />
+          src="{{ url_for('static', path=projeto['video']) }}" type="video/mp4"/>
         Seu navegador não suporta vídeos.
       </video>
+
       {% elif projeto['gif'] %}
       <img
-        src="{{ url_for('static', filename=projeto['gif']) }}"
+        src="{{ url_for('static', path=projeto['gif']) }}"
         class="w-100"
         alt="Imagem do projeto"
       />
