--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,5 +1,10 @@
-{% extends 'base.html' %} {% block title %} Sobre {% endblock %} {% block
-content %}
+{% extends 'base.html' %}
+
+ {% block title %} 
+ Sobre 
+ {% endblock %} 
+ 
+ {% block content %}
 <br>
   <section class="section-about ">
     <h2>Olá! Eu sou <span>Marcello Prado Muller</span></h2>
